<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/btn_notification"
        android:title="Custom"
        android:icon="@drawable/ic_notification"
        android:visible="false"
        android:enabled="false"
        android:contentDescription="menu_btn"
        android:tag="button1"
...
