...
            android:id="@+id/facilityPhoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/facilityNameTextView"
            android:layout_toEndOf="@id/facilityImageView"
            android:layout_marginTop="4dp"
            android:text="123-456-7890"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />

        <!-- Delete Button -->
        <ImageButton
            android:id="@+id/deleteFacilityButton"
...
