...
            android:textSize="11sp"
            app:backgroundTint="@color/btn_background_selector"
            app:shapeAppearanceOverlay="@style/LeftRoundedButtonShape"/>

        <!-- Organizer Button  -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_organizer"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Organizer"
            android:textColor="@color/btn_text_selector"
            android:textSize="11sp"
...
